tests/errors/continue_value_filter_type_mismatch.dang
# continue value must match the expected block return type
let xs = [1, 2, 3].filter { x =>
  if (x == 2) {
    continue 20
  }
  x > 0
}
